Archive/00793186e9af37b799a19da9bebf4bad-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In instantiation of 'void Print(T&&, Tn&& ...) [with long unsigned int n = 1ul; T = int; Tn = {}]':
main.cpp:10:62:   recursively required from 'void Print(T&&, Tn&& ...) [with long unsigned int n = 2ul; T = int; Tn = {int}]'
main.cpp:10:62:   required from 'void Print(T&&, Tn&& ...) [with long unsigned int n = 3ul; T = int; Tn = {int, int}]'
main.cpp:20:62:   required from 'void Print(Tn&& ...) [with Tn = {int, int, int}]'
main.cpp:29:47:   required from 'void Cleave(Tn&& ..., const disambiguator_t&, Tx&& ...) [with Tn = {}; Tx = {int, int, int}]'
main.cpp:34:28:   required from here
main.cpp:10:62: error: no matching function for call to 'Print()'
     Print<sizeof...(Tn), Tn...>( std::forward<Tn>( argn )... );
                                                              ^
main.cpp:10:62: note: candidate is:
main.cpp:8:6: note: template<long unsigned int n, class T, class ... Tn> void Print(T&&, Tn&& ...)
 void Print ( T&& arg, Tn&&... argn ) {
      ^
main.cpp:8:6: note:   template argument deduction/substitution failed:
main.cpp:10:62: note:   candidate expects 2 arguments, 0 provided
     Print<sizeof...(Tn), Tn...>( std::forward<Tn>( argn )... );
                                                              ^
